--- a/views/jakc_parking_transaction_view.xml
+++ b/views/jakc_parking_transaction_view.xml
@@ -53,6 +53,58 @@
             </field>
         </record>    
 
+ 		<record model="ir.ui.view" id="view_parking_transaction_session_kanban">
+			<field name="name">parking.transaction.session.kanban</field>
+			<field name="model">parking.transaction.session</field>
+			<field name="arch" type="xml">
+				<kanban class="o_kanban_small_column o_opportunity_kanban" archivable="false" examples="sh_helpdesk" sample="1">
+					<field name="name" />
+					<field name="session_date" />
+					<field name="shift_id" />
+					<field name="color" />
+					<field name="operator_id" />
+					<field name='state'/>
+					<templates>
+						<t t-name="kanban-box">
+							<div t-attf-class="#{kanban_color(record.color.raw_value)} oe_kanban_global_click">
+								<div class="oe_kanban_content">
+									<div>
+										<strong>
+											<field name="name" />
+										</strong>
+										<strong>
+											:
+											<field name="session_date" />
+										</strong>
+									</div>
+									<div>
+										<strong>
+											<field name="operator_id" />
+										</strong>
+									</div>
+									<div>
+										<strong>
+											<field name="shift_id" />
+										</strong>
+									</div>
+									<div>
+										<strong>
+											<field name="state" />
+										</strong>
+									</div>
+									<div class="o_kanban_record_bottom">
+										<div class="oe_kanban_bottom_right">
+										</div>
+									</div>
+								</div>
+								<div class="oe_clear" />
+							</div>
+						</t>
+					</templates>
+				</kanban>
+			</field>
+		</record>
+
 		<record model="ir.ui.view" id="view_parking_transaction_session_filter">
             <field name="name">Transaction Session Search</field>
             <field name="model">parking.transaction.session</field>
