--- a/views/jakc_parking_menu.xml
+++ b/views/jakc_parking_menu.xml
@@ -18,7 +18,7 @@
         <!-- MASTER -->
         <menuitem id="parking_booth_menu" name="Booth" parent="base.parking_master_menu"  action="action_parking_booth" groups="group_parking_officer,group_parking_manager,group_parking_admin" sequence="1"/>
         <menuitem id="parking_pricing_menu" name="Pricing" parent="base.parking_master_menu"  action="action_parking_pricing" groups="group_parking_officer,group_parking_manager,group_parking_admin" sequence="2"/>
-        <menuitem id="parking_product_menu" name="Product" parent="base.parking_master_menu"  action="action_parking_product" groups="group_parking_officer,group_parking_manager,group_parking_admin" sequence="2"/>
+        <menuitem id="parking_product_menu" name="Product" parent="base.parking_master_menu"  action="product_template_parking_action" groups="group_parking_officer,group_parking_manager,group_parking_admin" sequence="2"/>
 
 
         <!-- TRANSACTION -->
