--- a/views/product_view.xml
+++ b/views/product_view.xml
@@ -18,6 +18,7 @@
             </field>
         </record>
 
+        <!--
         <record model="ir.ui.view" id="view_parking_product_tree">
             <field name="name">parking.product.tree</field>
             <field name="model">product.template</field>
@@ -46,6 +47,23 @@
             <field name="search_view_id" ref="product_template_parking_product_filter"/>
             <field name="context">{"search_default_parking_products": 1, 'iface_parking_membership': True}</field>
         </record>
-
+        -->
+        <record id="product_template_parking_action" model="ir.actions.act_window">
+            <field name="name">Products</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">product.template</field>
+            <field name="view_mode">kanban,tree,form,activity</field>
+            <field name="view_id" ref="product.product_template_kanban_view"/>
+            <field name="search_view_id" ref="product.product_template_search_view"/>
+            <field name="context">{"search_default_parking_products":1, "search_default_filter_to_sell":1, "sale_multi_pricelist_product_template": 1, "iface_parking_membership": True}</field>
+            <field name="help" type="html">
+                <p class="o_view_nocontent_smiling_face">
+                    Create a new product
+                </p><p>
+                    You must define a product for everything you sell or purchase,
+                    whether it's a storable product, a consumable or a service.
+                </p>
+            </field>
+        </record>
     </data>
 </odoo>
