Update Customer Views

--- a/views/jakc_parking_menu.xml
+++ b/views/jakc_parking_menu.xml
@@ -26,7 +26,7 @@
         <menuitem id="parking_transaction_menu" name="Transaction" parent="base.parking_transaction_menu"  action="action_parking_transaction" groups="group_parking_officer,group_parking_manager,group_parking_admin" sequence="2"/>
 
         <!-- MEMBERSHIP -->
-        <menuitem id="parking_customer_menu" name="Customer" parent="base.parking_membership_menu"  action="action_parking_customer" groups="group_parking_officer,group_parking_manager,group_parking_admin" sequence="1"/>
+        <menuitem id="parking_customer_menu" name="Customer" parent="base.parking_membership_menu"  action="smart_parking_res_partner_action_customer" groups="group_parking_officer,group_parking_manager,group_parking_admin" sequence="1"/>
         <menuitem id="parking_membership_menu" name="Membership" parent="base.parking_membership_menu"  action="action_parking_membership" groups="group_parking_officer,group_parking_manager,group_parking_admin" sequence="2"/>
         <menuitem id="parking_membership_payment_menu" name="Membership  Payment" parent="base.parking_membership_menu"  action="action_parking_membership_payment" groups="group_parking_officer,group_parking_manager,group_parking_admin" sequence="3"/>
 
